2021-09-08  Charlie Zender  <zender@uci.edu>

	* ncremap nco_rgr_wgt() implement Hail Mary algorithm to allow logically 1D mapfiles to regrid logically 2D datasets

2021-09-07  Charlie Zender  <zender@uci.edu>

	* ncremap fix tolerance test that gave false negative for Gaussian grids
	Test worked for eqa and fv grids, not Gaussian grids
	Failed test was applied in nco_rgr_wgt(), nco_grd_mk(), and nco_grd_nfr()

2021-09-02  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.2-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.2-alpha06: Foo Fighters';git push
	git tag -a 5.0.2-alpha06 -m 'ncclimo: tpd nfr fix; ncclimo/ncremap: mem_mb=0, srun not salloc; ncra: udu rcd;';git push --tags

	* ncclimo fix tpd_out inferral to work with single time-step input files

	* Add error diagnostics for UDUnits2 ut_read_xml() return codes

2021-09-01  Charlie Zender  <zender@uci.edu>

	* Add library/bm rcd support for upcoming netCDF versions 4.8.3, 4.8.4

	* Link to and successfully test newly released netCDF 4.8.1

	* ncclimo/ncremap update E3SMU paths to _latest and acme1 paths to /home/zender1

2021-08-31  Charlie Zender  <zender@uci.edu>

	* ncclimo change interactive compute node access from salloc to srun to avoid Compy issues

2021-08-30  Charlie Zender  <zender@uci.edu>

	* ncremap/ncclimo change mem_mb default from 20000 to 0 (indicates unlimited RAM)

2021-08-29  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.2-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.2-alpha05: HPV';git push
	git tag -a 5.0.2-alpha05 -m 'autoconf nco_c++=no; ncclimo/ncremap: /usr/bin/env bash, .h5m, p.h5m';git push --tags

	* ncremap HOSTNAME-dependent partition commands for compy, non

	* ncremap print sample map examination commands

	* ncclimo/ncremap: start scripts with #!/usr/bin/env bash instead of #!/bin/bash

	* ncremap partition .h5m to p.h5m

	* ncremap convert .g to .h5m

2021-08-27  Charlie Zender  <zender@uci.edu>

	* ncremap add stubs to convert .g to .h5m